--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@ build/tmp/compustat_built.dta filter=lfs diff=lfs merge=lfs -text
 build/in/compa.dta filter=lfs diff=lfs merge=lfs -text
 build/in/compq.dta filter=lfs diff=lfs merge=lfs -text
 build/in/names.dta filter=lfs diff=lfs merge=lfs -text
+build/in/SPMIM_data.dta filter=lfs diff=lfs merge=lfs -text
+build/out/out.dta filter=lfs diff=lfs merge=lfs -text
+analyze/in/out.dta filter=lfs diff=lfs merge=lfs -text
